初始化Alembic，配置数据库两种模式URL

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,12 @@
-OPENAI_API_KEY=
-OPENAI_MODEL=
-DATABASE_URL=
-ENV=
+OPENAI_API_KEY=<secret>
+
+OPENAI_MODEL=gpt-4o
+
+# 给Alembic迁移：同步
+DATABASE_URL_SYNC=postgresql+psycopg2://user:password@localhost:5432/mydb
+
+# 给FastAPI运行时：异步
+DATABASE_URL_ASYNC=postgresql+asyncpg://user:password@localhost:5432/mydb
+
+# 环境：开发环境
+ENV=dev
