--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-aiohttp
-fastapi
-openai
-passlib[bcrypt]
-pyjwt
-pydantic
-python-dotenv
-sqlalchemy
-uvicorn
+alembic==1.16.5
+fastapi==0.116.2
+openai==1.108.0
+passlib==1.7.4
+pydantic==2.11.9
+PyJWT==2.10.1
+PyJWT==2.10.1
+python-dotenv==1.1.1
+SQLAlchemy==2.0.43
