Document PostgreSQL setup and add progress migration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,23 @@
-# Docker Compose setup
+version: "3.9"
+
+services:
+  postgres:
+    image: postgres:15
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: just_gov
+      POSTGRES_PASSWORD: just_gov
+      POSTGRES_DB: just_gov
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U just_gov -d just_gov"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
+volumes:
+  postgres_data:
