--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -85,7 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 # sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql+psycopg://liu:YourStrongPwd!@localhost:5432/governance_db
+sqlalchemy.url = postgresql+psycopg://appuser:StrongPwd!@localhost:5432/appdb
 
 
 [post_write_hooks]
